src/ui/DropdownTypeaheadReference.scss
.widget-dropdowntypeahead-wrapper {
    display: inline-flex;
    position: relative;
    padding-bottom: 4px;
    width: 100%;
    height: 100%;

    [class*='nolabel'] {
        width: 100%;
    }
    
    [class*='showlabel'] {
        width: 75%;
        padding-bottom: 8px;
        padding-left: 7px;
    }

    [class*='disabled'] {
        cursor: not-allowed;
    }
    
    }

@media (min-width: 767px) {
    .div-wrapper-label {
        display: inline-block;
        width: 25%;

        .mx-control-label{
        padding-top: 8px;
        padding-bottom: 8px;
        line-height: 1.42857;
        margin-bottom: 0;
        padding-right: 22px;
        font-weight: 600;
        float: right;
        }
    }
}

@media (min-width: 100px) and (max-width:766px) {
    .div-wrapper-label {
        display: block;

        .mx-control-label{
            padding-right: 22px;
            font-weight: 600;
            color: #666;
            font-size: 14px;
            }
    }

    .css-10nd86i {
        position: relative;
        min-height: 1px;
        width: 100%;
    }

    .widget-reference-selector-wrapper {
        display: block !important;
    }

    .div-wrapper {
        padding-left: 0px !important;
        width: 100% !important;
    }
}

.div-wrapper {
    display: inline-block;
}

.css-10nd86i {
    position: relative;
    min-height: 1px;
    width: 100%
}

.css-1aya2g8 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    background-color: #FFF !important;
    border-color: hsl(0,0%,80%);
    border-radius: 4px;
    border-style: solid;
    border-width: 1px;
    cursor: default;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    min-height: 38px;
    outline: 0 !important;
    position: relative;
    -webkit-transition: all 100ms;
    transition: all 100ms;
    box-sizing: border-box;
}

.css-1rtrksz {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding: 2px 8px;
    -webkit-overflow-scrolling: touch;
    position: relative;
    box-sizing: border-box;
    // background-color: #FFF;
    background-color: inherit ;

}

.css-1wy0on6 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-align-self: stretch;
    -ms-flex-item-align: stretch;
    align-self: stretch;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    // background-color: #FFF;
    background-color: inherit ;
    box-sizing: border-box;
}

.css-d8oujb {
    display: none !important;
}

.css-1ep9fjw {
    color: #999;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 8px;
    -webkit-transition: color 150ms;
    transition: color 150ms;
    box-sizing: border-box;
}

.css-19bqh2r {
    fill:  #555555 !important;
    fill: currentColor;
    line-height: 1;
    stroke: currentColor;
    stroke-width: 0;
}

.css-162g8z5 {
    // background-color: #FFF !important;
    //     /* border: 1px solid #D7D7D7; */ color: #555555; */
    background-color: #eee !important;
    opacity: 1;
    :hover{ cursor: not-allowed !important;}
}

.css-va7pk8 {
    color: #555555 !important;
}

